Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/capture/T6594284.out
T6594284.java:18:24: compiler.err.not.within.bounds: ? extends T6594284.E, T
1 error
